refactored company to bar
